--- a/github_curso.html
+++ b/github_curso.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="css/estilos_css.css"/>
 </head>
 <body>
-    <h1>Esto es un ejercicio de practica</h1>
-    <p> Pondremos en práctica los conocimientos de GitHub</p>
+    <div id="container">
+        <div id="post">
+            <h1>
+                Este es un archivo de prueba
+            </h1>
+            <p>
+                Se pondrán en práctica los conocimientos del curso de GitHUB. 
+            </p>
+        </div>
+    </div>
 </body>
 </html>
