Finalizada la cabecera con diseño azul

--- a/github_curso.html
+++ b/github_curso.html
@@ -9,7 +9,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Primeros ejercicios 
+            <span id="tagline"> Comienzo de desarrollador</span> 
         </div>
         <div id="post">
             <h1>
