Cambios en los párrafos, y en la tipografía: Courier

--- a/github_curso.html
+++ b/github_curso.html
@@ -15,6 +15,7 @@
             <p>
                 Se pondrán en práctica los conocimientos del curso de GitHUB. 
             </p>
+            <p>Este párrafo se agrega desde la rama master. Servira para hacer pruebas del git merget.</p>
         </div>
     </div>
 </body>
