Cambios para provocar un error en el merge master

--- a/github_curso.html
+++ b/github_curso.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             Primeros ejercicios 
-            <span id="tagline"> Comienzo de desarrollador</span> 
+            <span id="tagline"> Comienzo de desarrollador frontend</span> 
         </div>
         <div id="post">
             <h1>
@@ -19,7 +19,7 @@
             <p>
                 Se pondrán en práctica los conocimientos del curso de GitHUB. 
             </p>
-            <p>Este párrafo se agrega desde la rama master. Servira para hacer pruebas del git merget.</p>
+            <p>Este párrafo se agrega desde la rama master. Servira para hacer pruebas del git merget y los posibles conflictos que se tenga.</p>
         </div>
     </div>
 </body>
