Update the tittle github_curso.html

--- a/github_curso.html
+++ b/github_curso.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             Primeros ejercicios 
-            <span id="tagline"> Comienzo de desarrollador backend</span> 
+            <span id="tagline"> Comienzo de desarrollador backend en GitHub</span> 
         </div>
         <div id="post">
             <h1>
