--- a/github_curso.html
+++ b/github_curso.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de GITHUB</title>
+    <title>Curso de GIT&GITHUB</title>
     <link rel="stylesheet" href="css/estilos_css.css"/>
 </head>
 <body>
     <div id="container">
         <div id="cabecera">
             Primeros ejercicios 
-            <span id="tagline"> Comienzo de desarrollador backend en GitHub</span> 
+            <span id="tagline"> Comienzo de desarrollador backend</span> 
         </div>
         <div id="post">
             <h1>
